--- a/_posts/2023-08-18-cfp-2023.markdown
+++ b/_posts/2023-08-18-cfp-2023.markdown
@@ -9,13 +9,14 @@ hero_height:  is-middle
 hero_darken:  true
 ---
 
-今年は発表とBOFを募集します！ 募集の〆切は9月8日です。ご応募は[こちらのフォーム](https://example.com)からお願いいたします。
+今年は発表とBOFを募集します！ 募集の〆切は9月8日です。ご応募は[こちらのフォーム](https://docs.google.com/forms/d/e/1FAIpQLSfuJsAS3Q2Qahy1WBMnnuv8SYJUfA7gutHubbXYSRVhmKUJdQ/viewform?fbclid=IwAR0f7ejp4hiVVoxsljIohRz5aQiF7sGFMIZinh2CJbmRNCI-SjTpeuT6cLw)からお願いいたします。
 
 皆様からの申し込みをお待ちしております。
 
 ## 募集要項
-Open Networking Conference Japan 2023 では11月10日に本講演と前日にBirds of a Feather(BoF)の開催いたします。
+Open Networking Conference Japan 2023 では11月10日に本講演と前日にBirds of a Feather (BoF)の開催いたします。
 ネットワーク関連技術の取り組みを共有・議論できる場とするために、本講演と前日のBOFでの講演を募集いたします。今年の[開催趣旨]({{ site.baseurl }}/index.html "開催趣旨")に沿っていただければ、どのような内容でもかまいません。皆様からの申し込みをお待ちしております。
+
 なお、申し込み多数の場合は、実行委員会にて選考の結果、発表者・発表場所(本講演、BoF)を決定させていただきます。あらかじめご了承ください。
 
 ## 発表日時
