--- a/_posts/2019-07-01-onic.markdown
+++ b/_posts/2019-07-01-onic.markdown
@@ -3,7 +3,7 @@ layout: post
 title: Open NetworkIng Conference Japan 2019 BoF 開催のご案内
 description: ONIC 2019 BoF 開催のご案内
 date: 2019-07-01 18:05:55 +0900
-#hero_image: /img/onic2019.jpeg
+hero_image: /img/onic2019-2.jpeg
 #image: /img/mitsuo-komoriya-a8n0ZmlNlQ8-unsplash.jpg
 hero_height: is-middle
 hero_darken: true
