--- a/_posts/2019-05-27-onic.markdown
+++ b/_posts/2019-05-27-onic.markdown
@@ -4,6 +4,7 @@ title: Open NetworkIng Conference Japan 2019開催決定
 description: ONIC 2019開催のお知らせ
 date: 2019-05-27 18:05:55 +0900
 hero_image: /img/onic2019-2.jpeg
+image: /img/onic2019-2.jpeg
 #hero_image: /img/mitsuo-komoriya-a8n0ZmlNlQ8-unsplash.jpg
 #image: /img/mitsuo-komoriya-a8n0ZmlNlQ8-unsplash.jpg
 hero_height: is-middle
