--- a/_posts/2019-10-25-onic.markdown
+++ b/_posts/2019-10-25-onic.markdown
@@ -4,6 +4,7 @@ title: Open NetworkIng Conference Japan 2019 いよいよ来週開催！
 description: ONIC 2019 いよいよ来週開催！
 date: 2019-10-25 18:05:55 +0900
 hero_image: /img/onic2019-2.jpeg
+image: /img/onic2019-2.jpeg
 #image: /img/onic2019-1004-2.jpeg
 #image: /img/onic2019-1004-3.jpeg
 hero_height: is-middle
