--- a/_posts/2019-10-25-onic.markdown
+++ b/_posts/2019-10-25-onic.markdown
@@ -3,8 +3,8 @@ layout: post
 title: Open NetworkIng Conference Japan 2019 いよいよ来週開催！
 description: ONIC 2019 いよいよ来週開催！
 date: 2019-10-25 18:05:55 +0900
-hero_image: /img/onic2019-2.jpeg
-image: /img/onic2019-2.jpeg
+hero_image: /archives/2019/img/onic2019-2.jpeg
+image: /archives/2019/img/onic2019-2.jpeg
 #image: /img/onic2019-1004-2.jpeg
 #image: /img/onic2019-1004-3.jpeg
 hero_height: is-middle
