--- a/_posts/2018-10-14-onic-2018.markdown
+++ b/_posts/2018-10-14-onic-2018.markdown
@@ -3,9 +3,9 @@ layout: post
 title:  Open NetworkIng Conference Japan 2018 会場
 description: 会場
 date:   2018-10-04 13:00:00 +0900
-hero_image:  /img/ohga-hall.jpeg
-image:  /img/ohga-hall-2.jpeg
-image:  /img/ohga-hall-2.jpeg
+hero_image:  /archives/2018/img/ohga-hall.jpeg
+image:  /archives/2018/img/ohga-hall-2.jpeg
+image: /archives/2018/img/ohga-hall-2.jpeg
 hero_height:  is-middle
 hero_darken:  true
 ---
