--- a/_posts/2018-10-18-onic-2018-2.markdown
+++ b/_posts/2018-10-18-onic-2018-2.markdown
@@ -3,11 +3,11 @@ layout: post
 title:  Open NetworkIng Conference Japan 2018 素敵なホールです
 description: 素敵なホールです
 date:   2018-10-18 14:00:00 +0900
-hero_image:  /img/20181018-1.jpeg
-image:  /img/20181018-2.jpeg
-image:  /img/20181018-3.jpeg
-image:  /img/20181018-4.jpeg
-image:  /img/20181018-5.jpeg
+hero_image:  /archives/2018/img/20181018-1.jpeg
+image:  /archives/2018/img/20181018-2.jpeg
+image:  /archives/2018/img/20181018-3.jpeg
+image:  /archives/2018/img/20181018-4.jpeg
+image:  /archives/2018/img/20181018-5.jpeg
 hero_height:  is-middle
 hero_darken:  true
 ---
