--- a/_posts/2018-10-19-onic-2018-1.markdown
+++ b/_posts/2018-10-19-onic-2018-1.markdown
@@ -3,9 +3,9 @@ layout: post
 title:  Open NetworkIng Conference Japan 2018 いいところです
 description: いいところです
 date:   2018-10-18 09:00:00 +0900
-hero_image:  /img/20181019-1.jpeg
-image:  /img/20181019-2.jpeg
-image:  /img/20181019-3.jpeg
+hero_image:  /archives/2018/img/20181019-1.jpeg
+image:  /archives/2018/img/20181019-2.jpeg
+image:  /archives/2018/img/20181019-3.jpeg
 hero_height:  is-middle
 hero_darken:  true
 ---
