--- a/_posts/2018-10-26-onic-2018.markdown
+++ b/_posts/2018-10-26-onic-2018.markdown
@@ -3,7 +3,7 @@ layout: post
 title:  Open NetworkIng Conference Japan 2018 資料の公開を始めました。
 description: 資料の公開を始めました。
 date:   2018-10-26 15:00:00 +0900
-hero_image:  /img/shindo-san.jpeg
+hero_image:  /archives/2018/img/shindo-san.jpeg
 hero_height:  is-middle
 hero_darken:  true
 ---
