--- a/_posts/2018-05-14-onic-2018-announce.markdown
+++ b/_posts/2018-05-14-onic-2018-announce.markdown
@@ -3,8 +3,8 @@ layout: post
 title: Open NetworkIng Conference Japan 2018開催
 description: ONIC 2018開催のお知らせ
 date: 2018-05-14 18:05:55 +0900
-hero_image: /img/onic2018.jpeg
-image: /img/onic2018.jpeg
+hero_image: /archives/2018/img/onic2018.jpeg
+image: /archives/2018/img/onic2018.jpeg
 #hero_height: is-middle
 #hero_darken: true
 ---
