--- a/_posts/2018-07-30-onic-2018.markdown
+++ b/_posts/2018-07-30-onic-2018.markdown
@@ -3,8 +3,8 @@ layout: post
 title:  Open NetworkIng Conference Japan 2018 Webページ公開
 description: 今年のwebページ公開しました！
 date:   2023-07-30 13:00:00 +0900
-hero_image: /img/onic2018.jpeg
-image: /img/onic2018.jpeg
+hero_image: /archives/2018/img/onic2018.jpeg
+image: /archives/2018/img/onic2018.jpeg
 #hero_height:  is-middle
 #hero_darken:  true
 ---
