--- a/_posts/2018-10-09-onic-2018.markdown
+++ b/_posts/2018-10-09-onic-2018.markdown
@@ -3,8 +3,8 @@ layout: post
 title:  Open NetworkIng Conference Japan 2018 プログラムが出そろいました！
 description: プログラムが出そろいました！
 date:   2018-10-09 13:00:00 +0900
-hero_image: /img/onic2018.jpeg
-image: /img/onic2018.jpeg
+hero_image: /archives/2018/img/onic2018.jpeg
+image: /archives/2018/img/onic2018.jpeg
 #image:  /img/ohga-hall-2.jpeg
 #hero_height:  is-middle
 #hero_darken:  true
