--- a/_posts/2018-10-18-onic-2018-1.markdown
+++ b/_posts/2018-10-18-onic-2018-1.markdown
@@ -4,6 +4,7 @@ title:  Open NetworkIng Conference Japan 2018 軽井沢から現地情報です.
 description: 軽井沢から現地情報です.
 date:   2018-10-18 13:00:00 +0900
 hero_image:  /archives/2018/img/mall.jpeg
+image:  /archives/2018/img/mall.jpeg
 #image:  /img/ohga-hall-2.jpeg
 #image:  /img/ohga-hall-2.jpeg
 hero_height:  is-middle
