--- a/_posts/2024-07-17-onic-2024-bof.markdown
+++ b/_posts/2024-07-17-onic-2024-bof.markdown
@@ -9,17 +9,16 @@ hero_height: is-middle
 hero_darken: true
 ---
 
-10月10日（木）にはBirds of a Feather (BoF) 、10月11日（金）は本会議を予定しております  
-ネットワーク関連技術の取り組みを多くの方に広く共有し、活発に議論できる場とするために、  
-本会議前日の夜に開催するBoFで発表いただける方を募集いたします。  
+10月10日（木）にはBirds of a Feather (BoF) 、10月11日（金）は本会議を予定しております。
 
-今年の[開催趣旨](https://www.onic.jp/#%E9%96%8B%E5%82%AC%E8%B6%A3%E6%97%A8%E6%96%87) に沿っていただければ、どのような内容でもかまいません。  
-是非この機会をご活用ください。皆様からの申し込みをお待ちしております。  
+ネットワーク関連技術の取り組みを多くの方に広く共有し、活発に議論できる場とするために、本会議前日の夜に開催するBoFで発表いただける方を募集いたします。  
+
+今年の[開催趣旨](https://www.onic.jp/#%E9%96%8B%E5%82%AC%E8%B6%A3%E6%97%A8%E6%96%87)に沿っていただければ、どのような内容でもかまいません。是非この機会をご活用ください。
+
+皆様からの申し込みをお待ちしております。  
 
 ## 登録フォームはこちら<br>「[Open NetworkIng Conference Japan 2024 BoF登録](https://forms.gle/eeAzi9u7AgvEHudx6)」
 
-| 日時  | BoF ：2024年10月10日（木）17:00〜20:30（予定） |
-| 会 場 | 軽井沢　大賀ホール　（BoFはオンラインは実施しません）  
-|   |  BoF ：軽井沢大賀ホール ホワイエ (ロビースペース) |
-
-
+| 日時  | BoF ：2024年10月10日（木）17:00〜20:30（予定）           |
+| 会 場 | 軽井沢　大賀ホール　（BoFはオンライン配信は実施しません）|  
+|       | BoF ：軽井沢大賀ホール ホワイエ (ロビースペース)         |
