yet another replacement from http://www.onic.jp with site.baseurl.

--- a/_posts/2024-07-17-onic-2024-bof.markdown
+++ b/_posts/2024-07-17-onic-2024-bof.markdown
@@ -13,7 +13,7 @@ hero_darken: true
 
 ネットワーク関連技術の取り組みを多くの方に広く共有し、活発に議論できる場とするために、本会議前日の夜に開催するBoFで発表いただける方を募集いたします。  
 
-今年の[開催趣旨](https://www.onic.jp/#%E9%96%8B%E5%82%AC%E8%B6%A3%E6%97%A8%E6%96%87)に沿っていただければ、どのような内容でもかまいません。是非この機会をご活用ください。
+今年の[開催趣旨]({{ site.baseurl }}/#%E9%96%8B%E5%82%AC%E8%B6%A3%E6%97%A8%E6%96%87)に沿っていただければ、どのような内容でもかまいません。是非この機会をご活用ください。
 
 皆様からの申し込みをお待ちしております。  
 
